--- a/com.supermarketProject/test-output/old/Default suite/methods-not-run.html
+++ b/com.supermarketProject/test-output/old/Default suite/methods-not-run.html
@@ -1,3 +1,5 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>executeClass.ExpenceCategoryPageExecution.verifyHeading</td></tr>
+<tr><td>executeClass.LogInPageExecution.verifySuccessfulLogin</td></tr>
+<tr><td>executeClass.LogInPageExecution.verifySLoginWithInvalidUsernameAndPassword</td></tr>
+<tr><td>executeClass.LogInPageExecution.isRememberMeCheckboxEnabledAfterClick</td></tr>
 </table>
