--- a/com.supermarketProject/test-output/old/Default suite/classes.html
+++ b/com.supermarketProject/test-output/old/Default suite/classes.html
@@ -4,18 +4,26 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>executeClass.ExpenceCategoryPageExecution</td>
+<td>executeClass.LogInPageExecution</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyHeading</td>
+<td>verifySuccessfulLogin</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>addNewexpenceCategory</td>
+<td>isRememberMeCheckboxEnabledAfterClick</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyUnsuccessfulLogin</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifySLoginWithInvalidUsernameAndPassword</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
